# ComfyUI_OuteTTS

./: README-CN.md  README.md  __init__.py  outettsnode.py  pyproject.toml  requirements.txt
outetts/: audio_dac.py  whisper.py
outetts/models/: hfmodel.py  pplpp.py
outetts/ttsv3/: audio_processor.py  prompt_processor.py
outetts/utils/: preprocessing.py
