[project]
name = "qutets-mw"
description = "OuteTTS - Unified Text-To-Speech. A node for ComfyUI."
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/billwuhao/ComfyUI_OuteTTS"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mw"
DisplayName = "MW-ComfyUI_OuteTTS"
Icon = ""
